<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AreaSoloNumero">

    <TextView
        android:id="@+id/txtTituloUnSoloValor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1C486A"
        android:padding="20px"
        android:text="@string/tituloCuadrado"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="40px">

        <TextView
            android:id="@+id/txtValorCuadrado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="50dp"
            android:paddingTop="40dp"
            android:paddingBottom="40dp"
            android:text="@string/lado"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/lblNumero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:width="50dp"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCalcularCuadrado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="#1C486A"
            android:minWidth="50dp"
            android:onClick="guardar_un_valor_area"
            android:text="@string/calcular"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btnBorrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="#1C486A"
            android:minWidth="40dp"
            android:text="@string/borrar"
            android:textColor="#FFFFFF" />
    </LinearLayout>
</LinearLayout>